--- a/style.css
+++ b/style.css
@@ -557,8 +557,8 @@ a:active {
 --------------------------------------------------------------*/
 .main-navigation {
 	clear: both;
-	display: block;
-	float: left;
+	display: inline-block;
+	float: center;
 	width: 100%;
 }
 
@@ -567,17 +567,33 @@ a:active {
 	list-style: none;
 	margin: 0;
 	padding-left: 0;
+	
 }
 
 .main-navigation li {
-	float: left;
+	float: center;
 	position: relative;
+	padding-left: 1em;
+	padding-right: 1em;
+	background-color: black;
+	color: red;
 }
 
 .main-navigation a {
-	display: block;
+	display: inline-block;
 	text-decoration: none;
+	padding:1.2em;
+	color:white;
+	
 }
+.main-navigation a:hover{
+	color: red;
+}
+.main-navigation a:visited{
+	
+	color: grey;
+}
+
 
 .main-navigation ul ul {
 	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
