--- a/style.css
+++ b/style.css
@@ -47,8 +47,9 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 /*--------------------------------------------------------------
 # Normalize
 --------------------------------------------------------------*/
+@import url(https://fonts.googleapis.com/css?family=Josefin+Sans:400,400italic);
 html {
-	font-family: sans-serif;
+	font-family: 'Josefin Sans', sans-serif;
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust:     100%;
 }
