--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: abc-sushi
 Theme URI: http://underscores.me/
 Author: Kariann Brown, Amrita Singh, Dewshan Sarathchndra
 Author URI: http://underscores.me/
-Description: Assignment 2: Restaurant WordPress Theme
+Description: Assignment 2: Restaurant WordPress Theme; This is a customized theme created with Underscores theme
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
